[tool.poetry]
name = "tentorch"
version = "0.1.0"
description = "A custom PyTorch alternative with advanced features."
authors = [""]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"  # Specify your Python version
numpy = "^1.21"   # Example dependency, add others as needed

[tool.poetry.dev-dependencies]
pytest = "^6.0"   # Development dependencies for testing

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
